<resources>

    <string name="app_name">MEDTECH</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MEDTECH job card</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="job_card_btn_txt">Create new job card</string>
    <string name="sync_db">Sync with DB</string>
    <string name="upload_jobcard">Upload finished job cards</string>
    <string name="welcome">Welcome</string>
    <string name="job_no">Job NO</string>
    <string name="ordr_no">Order NO</string>
    <string name="job_card">Job Card</string>
    <string name="date">Date</string>
    <string name="no_internet_save_local">"No internet connection. Data save to local database"</string>
    <string name="save_local">"Data save to local database"</string>
    <string name="customer">Customer</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="equipment">Equipment</string>
    <string name="reasonforvisit">Reason for Visit</string>
    <string name="servicedetails">Service Details</string>
    <string name="part_used">Parts Used</string>
    <string name="Filament_counter">Filament counter</string>
    <string name="HV_Counter">HV Counter</string>
    <string name="Log_time">Log time</string>
    <string name="Starttime">Start time</string>
    <string name="EndTime">End Time</string>
    <string name="DownTime">Down Time</string>
    <string name="Travel_time">Travel Time</string>
    <string name="Customer_sign">Customer signature</string>
    <string name="Engineer">Engineer</string>
    <string name="Date">Date</string>
    <string name="JobStart">Job Start</string>
    <string name="JobFinished">Job Finished</string>
    <string name="TimeWorked">Time Worked</string>
    <string name="Timeworked">Time Worked</string>
    <string name="engineer_details">Engineer Details</string>
    <string name="closeandsave"></string>
    <string name="closeAndSave">Close and Save</string>
    <string name="closewithoutsave">Close</string>
    <string name="Exit">Exit</string>
    <string name="enginnertimeDetails">Engineer Time Details</string>
    <string name="enginner1">Engineer 01</string>
    <string name="eng_name">Name</string>
    <string name="traveTime">Travel hours</string>
    <string name="signature"> Get Signature</string>
    <string name="Signature">Signature</string>
    <string name="clientsignature">Client’s Signature</string>
     <string name="external_dir">medisignaturefolder</string>
     <string name="clear">Clear</string>
     <string name="savenclose">Save and Close</string>
     <string name="signuploadBtn">Upload to Server</string>
     <string name="add_new_engineer">Add New Engineer</string>
     <string name="unfinished_jobcard">Unfinished Job Cards OK</string>
     <string name="syncItem">Sync Item</string>
     <string name="Sync_eng">Sync Engineer Details</string>
     <string name="cusSync">Sync Customer</string>
     <string name="Partname">Part Name</string>
     <string name="quantity">"Quantity "</string>
     <string name="close">Close</string>
     <string name="addnext">Add Next</string>
     <string name="finish">Finish</string>
     <string name="signatureeng">Signature</string>
     <string name="sendemail">Send Email</string>
     <string name="viewjobcard">View Jobcard</string>
     <string name="vieweng">View Engineer</string>
     <string name="viewpart">View Parts</string>
     <string name="viewnext">View Next</string>
     <string name="viewengbtn">View Next Engineer</string>
     <string name="viewengpre">View Previous Engineer</string>
     <string name="partid">Part ID</string>
     <string name="emailcontent">Email Details</string>
     <string name="saveprevious">Save Previous</string>
     <string name="savelocally">Save Locally</string>
     <string name="canceljobcard">Cancel</string>
     <string name="uploadjobcard">Upload</string>
     <string name="hintclick">Click</string>
     <string name="inspection">Inspection not Applicable</string>
     <string name="visual">Visual Electrical &amp; Mechanical Safety Inspection CarriedOut</string>

</resources>